syntax = "proto3";

service UserService {
    rpc Create (User) returns (Response);
    rpc Get (User) returns (Response);
    rpc GetAll (Request) returns (Response);
}

message User {
    int32 id = 1;
    string username = 2;
    string password = 3;
    int32 age = 4;
    int32 created_at = 5;
    int32 updated_at = 6;
}

message Request {
    string username = 1;
}

message Response {
    User user = 1;
    repeated User users = 2;
    Error error = 3;
}

message Error {
    int32 code = 1;
    string message = 2;
}

